--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@
 # APP
 #--------------------------------------------------------------------
 
- app.baseURL = 'http://localhost/proyecto_final/public/'
+ app.baseURL = 'http://proyecto-final.test'
 # If you have trouble with `.`, you could also use `_`.
 # app_baseURL = ''
 # app.forceGlobalSecureRequests = false
@@ -31,7 +31,7 @@
 #--------------------------------------------------------------------
 
  database.default.hostname = localhost
- database.default.database = bd_colegio
+ database.default.database = db_colegio
  database.default.username = root
  database.default.password = 
 database.default.DBDriver = MySQLi
